deploy/k8s/02-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kenmoini-com
  namespace: kenmoini-com
  labels:
    app: kenmoini-com
    app.kubernetes.io/name: kenmoini-com
    app.kubernetes.io/part-of: kenmoini-com
spec:
  selector:
    matchLabels:
      app: kenmoini-com
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: kenmoini-com
    spec:
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
      - name: ghcr-pull-secret
      containers:
        - name: kenmoini-com
          imagePullPolicy: Always
          image: ghcr.io/kenmoini/kenmoini.com:latest
          ports:
            - containerPort: 8080
              name: web
