deploy/k8s/05-ingress-www.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: www-kenmoini-com-ingress
  namespace: kenmoini-com
  labels:
    app: kenmoini-com
    app.kubernetes.io/name: www-kenmoini-com-ingress
    app.kubernetes.io/part-of: kenmoini-com
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-dns-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
        - www.kenmoini.com
      secretName: kenmoini-com-www-tls
  rules:
    - host: www.kenmoini.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kenmoini-com-svc
                port:
                  number: 8080
